# cpp-devcontainer

./: .gitignore  CMakeLists.txt  README.md  calculator.hpp  main  main.cpp
.devcontainer/: .devcontainer  Dockerfile  devcontainer.json
src/: calculator.cpp
tests/: calculator_test.cpp
